tests/cases/fail/assert_non_bool.p4
def main() -> None:
    assert 1
